labs/1-ossm-networking/gw-ingress-http-https.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: $USER_NAMESPACE-ingress-gateway
  namespace: $USER_NAMESPACE-front
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http2
      protocol: HTTP2
    hosts:
    - 'bookinfo-$USER_NAMESPACE.apps.$EXTERNAL_DOMAIN'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - 'bookinfo-$USER_NAMESPACE.secure.apps.$EXTERNAL_DOMAIN'
    tls:
      credentialName: $USER_NAMESPACE-ingress-gateway-certs
      mode: MUTUAL
